Added Illinois Model training Notebook

--- a/scripts/IL_Cleaner.ipynb
+++ b/scripts/IL_Cleaner.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "3920cb6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "97e8ed21",
    "metadata": {},
    "outputs": [],
@@ -28,13 +29,12 @@
     "\n",
     "        df1dis = df1[df1[\"Type\" ]== \"District\"]\n",
     "        if yr != 23:\n",
-    "            df1 = df1[df1[\"School Type\"] == \"HIGH SCHOOL\"]\n",
+    "            df1 = df1[df1[\"School Type\"].isin([\"HIGH SCHOOL\", \"CHARTER SCH\"])]\n",
     "        else:\n",
-    "            df1 = df1[df1[\"School Type\"] == \"High School\"]\n",
+    "            df1 = df1[df1[\"School Type\"].isin([\"High School\", \"Middle/Junior High School\"])]\n",
     "        df1 = df1[df1[\"Type\"] == \"School\"]\n",
-    "        print(df1.shape)\n",
     "\n",
-    "        # Step 1: Merge df1 with df2 on \"District Name\"\n",
+    "        # Step 1: Merge df1 with df1dis on \"District Name\"\n",
     "        merged = df1.merge(\n",
     "            df1dis,\n",
     "            on=\"District\",\n",
@@ -42,14 +42,14 @@
     "            how=\"left\"\n",
     "        )\n",
     "\n",
-    "        # Step 2: For each column in df1, fill in missing values using the value from df2\n",
+    "        # Step 2: For each column in df1, fill in missing values using the value from df1dis. This is filling in missing school level data with corresponding district level data\n",
     "        for col in df1.columns:\n",
     "            if col != \"District\":  # Skip the join key\n",
     "                col_df1dis = col + \"_df1dis\"\n",
     "                if col_df1dis in merged.columns:\n",
     "                    merged[col] = merged[col].fillna(merged[col_df1dis])\n",
     "\n",
-    "        # Step 3: Drop the extra _df2 columns to clean up\n",
+    "        # Step 3: Drop the extra _df1dis columns to clean up\n",
     "        df1 = merged[df1.columns]\n",
     "        del merged\n",
     "\n",
@@ -63,6 +63,7 @@
     "        df1 = df1.merge(df2,on=\"RCDTS\",how=\"inner\")\n",
     "        df1 = df1.merge(df3, on = \"RCDTS\", how = \"inner\")\n",
     "        df1[\"Year\"] = \"20\" + str(yr)\n",
+    "        \n",
     "\n",
     "        df1.to_csv(outstring,index=False)\n",
     "\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "id": "c2016349",
    "metadata": {},
    "outputs": [],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "96924488",
    "metadata": {},
    "outputs": [],
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "f68f50a9",
    "metadata": {},
    "outputs": [
@@ -240,18 +241,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(650, 44)\n",
-      "(648, 46)\n",
-      "(646, 45)\n",
-      "(648, 44)\n",
-      "(698, 40)\n",
       "Cleaned column names for df19\n",
       "Cleaned column names for df20\n",
       "Cleaned column names for df21\n",
       "Cleaned column names for df22\n",
       "Cleaned column names for df23\n",
       "Columns that do NOT appear in all 5 dataframes:\n",
-      "\n"
+      "\n",
+      "(713, 51)\n",
+      "(691, 51)\n",
+      "(701, 51)\n",
+      "(700, 51)\n",
+      "(692, 52)\n",
+      "Filled 51 missing dropout rates in df22.\n"
      ]
     }
    ],
@@ -259,17 +261,68 @@
     "#Whip that data into shape!\n",
     "merge()\n",
     "cleaner()\n",
-    "check()\n"
+    "check()\n",
+    "\n",
+    "#Drop all rows without SAT data\n",
+    "for key in dfs:\n",
+    "    df = dfs[key]\n",
+    "\n",
+    "    # Coerce non-numeric values to NaN\n",
+    "    df[\"SAT Math Average\"] = pd.to_numeric(df[\"SAT Math Average\"], errors='coerce')\n",
+    "\n",
+    "    # Drop rows where the value is NaN or 0\n",
+    "    df = df.dropna(subset=[\"SAT Math Average\"])\n",
+    "    df = df[df[\"SAT Math Average\"] != 0]\n",
+    "\n",
+    "    print(df.shape)\n",
+    "    # Reset index and store back in dict\n",
+    "    dfs[key] = df.reset_index(drop=True)\n",
+    "\n",
+    "\n",
+    "# First, ensure all three DataFrames have the right column as numeric\n",
+    "for df in [df21, df22, df23]:\n",
+    "    df[\"High School Dropout Rate - Total\"] = pd.to_numeric(\n",
+    "        df[\"High School Dropout Rate - Total\"], errors='coerce'\n",
+    "    )\n",
+    "\n",
+    "# Create a mapping from RCDTS to dropout rate for df21 and df23\n",
+    "dropout_21 = df21.set_index(\"RCDTS\")[\"High School Dropout Rate - Total\"]\n",
+    "dropout_23 = df23.set_index(\"RCDTS\")[\"High School Dropout Rate - Total\"]\n",
+    "\n",
+    "# Function to get average from df21 and df23 if both exist\n",
+    "def average_if_available(rcdts):\n",
+    "    val_21 = dropout_21.get(rcdts, np.nan)\n",
+    "    val_23 = dropout_23.get(rcdts, np.nan)\n",
+    "    if pd.notna(val_21) and pd.notna(val_23):\n",
+    "        return (val_21 + val_23) / 2\n",
+    "    else:\n",
+    "        return np.nan  # don't fill if we can't get both\n",
+    "\n",
+    "# Apply this to missing rows in df22\n",
+    "mask_missing = df22[\"High School Dropout Rate - Total\"].isna()\n",
+    "df22.loc[mask_missing, \"High School Dropout Rate - Total\"] = df22.loc[mask_missing, \"RCDTS\"].apply(average_if_available)\n",
+    "\n",
+    "# Print how many we successfully filled\n",
+    "filled_count = mask_missing.sum() - df22[\"High School Dropout Rate - Total\"].isna().sum()\n",
+    "print(f\"Filled {filled_count} missing dropout rates in df22.\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "4027271b",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Export nice data frames\n",
+    "df19 = dfs['df19']\n",
+    "df20 = dfs['df20']\n",
+    "df21 = dfs['df21']\n",
+    "df22 = dfs['df22']\n",
+    "df23 = dfs['df23']\n",
+    "\n",
     "df19.to_csv(instr(19),index=False)\n",
     "df20.to_csv(instr(20),index=False)\n",
     "df21.to_csv(instr(21),index=False)\n",
@@ -280,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b41945",
+   "id": "e8887c29",
    "metadata": {},
    "outputs": [],
    "source": []
